<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/frPopularMovies_rvMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_create_new_note"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/btn_create_new_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/padding_normal"
        android:text="@string/button_show_first_movie_detail" />

</RelativeLayout>