<resources>
    <string name="app_name">AndroidBase</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_settings">User settings</string>
    <string name="title_activity_main">Your notes</string>
    <string name="title_activity_terms">Terms and conditions</string>
    <string name="title_activity_privacy">Privacy policy</string>

    <string name="title_activity_note_detail">Note detail</string>
    <string name="title_activity_note_create">Create a new note</string>
    <string name="title_activity_note_edit">Edit note</string>

    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_reset_password">Reset password</string>
    <string name="button_goto_login">I already have an account</string>
    <string name="button_settings">Settings</string>

    <string name="button_show_first_movie_detail">Show first movie\'s detail</string>
    <string name="button_create">Create</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>

    <string name="message_error">Some error occurred</string>
    <string name="message_expiration">This version is about to expire</string>
    <string name="message_expired">This version has expired</string>
    <string name="message_update">Please, update the application</string>
    <string name="message_ok">Ok</string>

    <string name="empty_list_error">List is Empty</string>

</resources>
